@@ -1,3 +1,10 @@
+** v4.56 for Shadowland Pre-Patch, 14.10.2020**
+* Adjusted QuestInfo skin to show colored progress again.
+* Fix my skin for ClassColored ScrollBars. >.>
+* Adjust the backdrop for AutoBar.
+* Commented out new HearthStones for SL, it broke the LocPanel.
+
+
 ** v4.55 for Shadowland Pre-Patch, 13.10.2020**
 * **YOU NEED ELVUI 12.00**
 * Added an own FlightMode (inspired by Benik's)
